--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,20 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+  <% if user_sign_in? %>
+    <%= link_to "logout", logout_path %>
+  <% end -%>
+<hr>
+<%= notice %>
 <%= yield %>
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<hr>
+<%= debug(session) %>
+<%= debug(params) if Rails.env.development? %>
 </body>
 </html>
