@Th0ar current_user 如何让在 controller 里生效？

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <% if user_sign_in? %>
+  <% if current_user %>
     <%= link_to "logout", logout_path %>
+    <%= "current_user: " + current_user.name %>
   <% end -%>
 <hr>
 <%= notice %>
