--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   <% if current_user %>
     <%= link_to "logout", logout_path %>
     <%= "current_user: " + current_user.name %>
+  <% else %>
+    <%= link_to "login", CASClient::Frameworks::Rails::Filter.login_url(controller) %>
   <% end -%>
 <hr>
 <%= notice %>
@@ -21,7 +23,6 @@
 <br>
 <br>
 <hr>
-<%= debug(session) %>
 <%= debug(params) if Rails.env.development? %>
 </body>
 </html>
