--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
 <body>
   <div class="container">
     <div id="left-nav">
+      <%= link_to "专题", feature_show_path, class: "nav-link" %>
       <% Category.all.each do |category| %>
         <%= link_to category.name, category_show_path(category), class: "nav-link" %>
       <% end -%>
