--- a/app/views/feature/show.html.erb
+++ b/app/views/feature/show.html.erb
@@ -1,2 +1,7 @@
-<h1>Feature#show</h1>
-<p>Find me in app/views/feature/show.html.erb</p>
+<h1>专题：<%= @feature.title %></h1>
+<div class="well">
+  <%= @feature.content %>
+</div>
+<% @feature.articles.each do |article| %>
+  <%= link_to article.title, article_path(article), class: "link" %> <br>
+<% end -%>
