--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -2,3 +2,6 @@
 <% @category.articles.each do |article| %>
   <%= link_to article.title, article_path(article), class: "link" %> <br>
 <% end -%>
+<br>
+<br>
+<%= link_to 'New Article', new_article_path(category: @category) %>
