--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@article) do |f| %>
+<%= simple_form_for(@article) do |f| %>
   <% if @article.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@article.errors.count, "error") %> prohibited this article from being saved:</h2>
@@ -20,8 +20,8 @@
     <%= f.text_field :content %>
   </div>
   <div class="field">
-    <%= f.label :category %><br />
-    <%= f.select :category, options_for_select(Category.all.map{|c|[c.name,c.id]}), :prompt => '选择分类' %>
+    <%= f.label :category_id %><br />
+    <%= f.select :category_id, options_for_select(Category.all.map{|c|[c.name,c.id.to_s]}, @article.category_id), :prompt => '选择分类' %>
   </div>
   <div class="actions">
     <%= f.submit %>
