--- a/app/views/votes/show.html.erb
+++ b/app/views/votes/show.html.erb
@@ -1,10 +1,44 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <b>Title:</b>
-  <%= @vote.title %>
-</p>
-
+<h1><%= @vote.title %></h1>
+<% @vote.options.each do |opt| %>
+  <%= opt.content + " (#{opt.count})" %>
+  <br>
+<% end -%>
+<%= form_tag vote_options_path(@vote), method: :post do %>
+  <% @vote.options.each do |opt| %>
+    <%= radio_button_tag "option", opt.id %> <%= label_tag "option_" + opt.id, opt.content %>
+  <% end -%>
+  <%= submit_tag "Submit" %>
+<% end %>
+<hr>
+<h2><%= @vote.comments.count %> Comments:</h2>
+<%= form_for [@vote, @comment] do |f| %>
+  <%= f.text_field :content %>
+  <%= f.submit %>
+<% end -%>
+<% @vote.comments.each do |comment| %>
+<div class="well">
+  <b>
+    <%= comment.commenter.nickname %>
+    says: 
+  </b>
+  <%= comment.content %>
+  <% comment.subcomments.each do |subcomment| %>
+  <div class="well">
+    <b>
+      <%= subcomment.commenter.nickname %> says: 
+    </b>
+    <%= subcomment.content %>
+  </div>
+  <% end -%>
+  <%= form_for @subcomment, url: vote_subcomments_path(@article, comment) do |f| %>
+    <%= f.text_field :content %>
+    <%= f.submit %>
+  <% end -%>
+</div>
+<% end -%>
+<br>
+<br>
+<br>
 
 <%= link_to 'Edit', edit_vote_path(@vote) %> |
 <%= link_to 'Back', votes_path %>
