Revert "add wysihtml5"
This reverts commit 895843b34396ef9bc98c12b9afc18cba987b5faf.

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -17,26 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :content %><br />
-    <div id="wysihtml5-toolbar" style="display: none;">
-      <a data-wysihtml5-command="bold">bold</a>
-      <a data-wysihtml5-command="italic">italic</a>
-      
-      <!-- Some wysihtml5 commands require extra parameters -->
-      <a data-wysihtml5-command="foreColor" data-wysihtml5-command-value="red">red</a>
-      <a data-wysihtml5-command="foreColor" data-wysihtml5-command-value="green">green</a>
-      <a data-wysihtml5-command="foreColor" data-wysihtml5-command-value="blue">blue</a>
-      
-      <!-- Some wysihtml5 commands like 'createLink' require extra paramaters specified by the user (eg. href) -->
-      <a data-wysihtml5-command="createLink">insert link</a>
-      <div data-wysihtml5-dialog="createLink" style="display: none;">
-        <label>
-          Link:
-          <input data-wysihtml5-dialog-field="href" value="http://" class="text">
-        </label>
-        <a data-wysihtml5-dialog-action="save">OK</a> <a data-wysihtml5-dialog-action="cancel">Cancel</a>
-      </div>
-    </div>
-    <%= f.text_area :content, id: "wysihtml5-textarea" %>
+    <%= f.text_field :content %>
   </div>
   <div class="field">
     <%= f.label :category_id %><br />
@@ -45,14 +26,8 @@
   <div class="actions">
     <%= f.submit %>
   </div>
-<% end %>
 
-<% content_for :script do %>
-  <script>
-    var editor = new wysihtml5.Editor("wysihtml5-textarea", { // id of textarea element
-      toolbar:      "wysihtml5-toolbar", // id of toolbar element
-      parserRules:  wysihtml5ParserRules, // defined in parser rules set 
-      stylesheets:  ["/assets/wysihtml5.css"]
-    });
-  </script>
-<% end -%>
+  <pre>
+    <%= @article.to_json %>
+  </pre>
+<% end %>
