--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
 
-<%= kindeditor_tag :content, 'Content' %>
+<%= kindeditor_tag :content, 'Content', window_onload: true %>
 
 <%= link_to "View all articles", articles_path %>
