--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -19,32 +19,7 @@
   <%= raw @article.content %>
 </div>
 <hr>
-<h2><%= @article.comments.count %> Comments:</h2>
-<%= form_for [@article, @comment] do |f| %>
-  <%= f.text_field :content %>
-  <%= f.submit %>
-<% end -%>
-<% @article.comments.each do |comment| %>
-<div class="well">
-  <b>
-    <%= comment.commenter.nickname %>
-    says: 
-  </b>
-  <%= comment.content %>
-  <% comment.subcomments.each do |subcomment| %>
-  <div class="well">
-    <b>
-      <%= subcomment.commenter.nickname %> says: 
-    </b>
-    <%= subcomment.content %>
-  </div>
-  <% end -%>
-  <%= form_for @subcomment, url: article_subcomments_path(@article, comment) do |f| %>
-    <%= f.text_field :content %>
-    <%= f.submit %>
-  <% end -%>
-</div>
-<% end -%>
+<%= render partial: 'comments/comments', object: @article, as: :commentable %>
 <br>
 <br>
 <br>
