--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -14,10 +14,12 @@
  *= require_directory .
  */
 
+@import "todc-bootstrap/variables";
+@import "bootstrap/mixins";
 
 .debug_dump {
   width: 500px;
-  display: none\9;   // disappear in IE
+  display: none;   // disappear in IE
   max-height: 400px;
   overflow: scroll;
   opacity: 0.1;
@@ -33,32 +35,185 @@ html, body {
   height: 100%;
 }
 
+.body-bg {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  z-index: 0;
+  background-image: url(/assets/background_image.png);
+  .background-size(cover);
+}
+
 .container {
   position: relative;
   width: 850px;
   min-height: 100%;
   background-color: #FFF;
-  box-shadow: 0 0 5px #999;
+  background-color: rgba(255,255,255,0.9);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5), inset 150px 0 0 rgba(250,250,250,0.5);
 }
 
 #left-nav {
   position: absolute;
   width: 150px;
   top: 200px;
+  z-index: 200;
 }
-
+.nav-link {
+  display: block;
+  font-size: 24px;
+  color: #CCC;
+  line-height: 40px;
+  text-align: center;
+  border-right: 3px solid transparent;
+  &.active:nth-child(1), &:nth-child(1):hover {
+    color: #39A7DE;
+    border-right-color: #39A7DE;
+  }
+  &.active:nth-child(2), &:nth-child(2):hover {
+    color: #B657C1;
+    border-right-color: #B657C1;
+  }
+  &.active:nth-child(3), &:nth-child(3):hover {
+    color: #8DC433;
+    border-right-color: #8DC433;
+  }
+  &.active:nth-child(4), &:nth-child(4):hover {
+    color: #D24542;
+    border-right-color: #D24542;
+  }
+  &.active:nth-child(5), &:nth-child(5):hover {
+    color: #0FA39A;
+    border-right-color: #0FA39A;
+  }
+  &.active:nth-child(6), &:nth-child(6):hover {
+    color: #F1CF18;
+    border-right-color: #F1CF18;
+  }
+  &.active {
+    font-size: 28px;
+  }
+}
+.nav-link-1 { color: ; }
+.login_link {
+  display: block;
+  position: fixed;
+  right: 10px;
+  top: 10px;
+  background-color: #000;
+  background-color: rgba(0, 0, 0, 0.6);
+  width: 30px;
+  height: 30px;
+  .border-radius(15px);
+  & > .icon-signin {
+    font-size: 18px;
+    padding: 0;
+    margin-left: 7px;
+    margin-top: 6px;
+    color: #FFF;
+  }
+  &:hover {
+    box-shadow: 0 0 8px #FFF;
+  }
+}
 #main {
   margin: 40px 60px 40px 180px;
   min-height: 500px;
 }
-#user-info {
-  position: fixed;
-  right: 10px;
-  top: 10px;
-}
-.nav-link {
+.avatar {
   display: block;
-  font-family: Songti;
-  font-size: 24px;
-  line-height: 1.6;
+  position: relative;
+  width: 60px;
+  height: 60px;
+  .border-radius(38px);
+  padding: 3px;
+  background-color: #fff;
+  margin: 0 7px;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+}
+.avatar-inner {
+  width: 60px;
+  height: 60px;
+  .border-radius(30px);
+}
+#user-bar {
+  position: fixed;
+  display: table;
+  right: 0;
+  top: 0;
+  height: 100%;
+  width: 80px;
+  background-color: #000;
+  background-color: rgba(0, 0, 0, 0.6);
+  .noti-num {
+    position: absolute;
+    right: 0;
+    top: -3px;
+    background-color: #fff;
+    padding: 3px;
+    .border-radius(13px);
+  }
+  .noti-num-inner {
+    background-color: #F1971B;
+    color: #FFF;
+    width: 20px;
+    height: 20px;
+    .border-radius(10px);
+    text-align: center;
+  } 
+  .center {
+    display: block;
+    width: 100%;
+    text-align: center;
+  }
+}
+.avatar-wrap {
+  position: relative;
+}
+.noti-box {
+  display: none;
+  position: absolute;
+  padding: 5px 0;
+  background-color: #FFF;
+  background-color: rgba(255, 255, 255, 0.7);
+  right: 90px;
+  top: 10px;
+  border-radius: 2px;
+  &:after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 16px;
+    right: -16px;
+    border: 8px solid transparent;
+    border-left-color: rgba(255, 255, 255, 0.7);
+  }
+}
+.noti-item {
+  display: block;
+  padding: 10px;
+  padding-left: 25px;
+  width: 150px;
+  &:hover {
+    background-color: #FFF;
+  }
+  .unread {
+    position: absolute;
+    color: #B5B5B5;
+    left: 10px;
+    color: #F1971B;
+  }
+}
+
+.logo {
+  display: block;
+  position: absolute;
+  top: -78px;
+  left: -170px;
+  z-index: 100;
+}
+label {
+  display: inline-block;
+  vertical-align: bottom;
+  margin-bottom: 2px;
 }
