--- a/app/assets/stylesheets/users.css.less
+++ b/app/assets/stylesheets/users.css.less
@@ -1,3 +1,73 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Less here: http://lesscss.org/
+
+@import "todc-bootstrap/variables";
+@import "bootstrap/mixins";
+
+.user-container {
+  box-shadow: none;
+  background: none;
+
+  #timeline {
+    margin: 0;
+    background-color: #FFF;
+    background-color: rgba(255,255,255,0.9);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    min-height: 400px;
+    .tabs-nav {
+      background-color: rgba(100, 100, 100, 0.1);
+      height: 75px;
+      text-align: center;
+    }
+    table {
+      width: 100%;
+    }
+    .tabs-item {
+      display: inline-block;
+      padding: 10px;
+      margin: 32px 30px 0;
+      font-size: 20px;
+      color: #555;
+      border-bottom: 3px solid transparent;
+      &.active {
+        border-bottom-color: #F1D233;
+      }
+      &.active:nth-child(2) {
+        border-bottom-color: #8DC433;
+      }
+    }
+    .timeline-item {
+      border-bottom: 1px solid #DDD;
+      .time {
+        color: #BBB;
+        font-size: 16px;
+        width: 80px;
+        padding: 20px;
+      }
+      .content {
+        padding: 20px 20px 20px 0;
+      }
+      .timeline-link {
+        display: block;
+        font-size: 1.2em;
+        text-indent: 10px;
+        line-height: 1.8;
+      }
+    }
+  }
+  .avatar {
+    position: relative;
+    top: -26px;
+    width: 146px;
+    height: 146px;
+    padding: 7px;
+    .border-radius(80px);
+    margin: 0 auto;
+  }
+  .avatar-inner {
+    width: 146px;
+    height: 146px;
+    .border-radius(80px);
+  }
+}
