--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :content %><br />
-    <%= f.text_field :content %>
+    <%= f.kindeditor :content, window_onload: true %>
   </div>
   <div class="field">
     <%= f.label :category_id %><br />
