--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,7 +8,7 @@
   </tr>
 <% @articles.each do |article| %>
   <tr>
-    <td><%= link_to article.category.name, category_show_path(article.category) %></td>
+    <td><%= link_to article.category.name, category_path(article.category) %></td>
     <td><%= link_to article.title, article, class: "link" %></td>
     <td class="w30"><%= link_to '编辑', edit_article_path(article), class: "link" %></td>
     <td class="w30"><%= link_to '删除', article, method: :delete, data: { confirm: 'Are you sure?' }, class: "link" %></td>
