--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -3,44 +3,17 @@
 <head>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta charset="utf-8">
-  <title>银杏时报 - Home</title>
+  <title>银杏时报 - 首页</title>
   <%= stylesheet_link_tag "application", :media => "all" %>
   <%= csrf_meta_tags %>
   <%= yield :style %>
 </head>
 <body>
-  <div class="container">
-    <div id="left-nav">
-      <%= link_to "专题", feature_path(Feature.first), class: "nav-link" %>
-      <% Category.all.each do |category| %>
-        <%= link_to category.name, category_show_path(category), class: "nav-link" %>
-      <% end -%>
-      <%= link_to "投票", votes_path, class: "nav-link" %>
-    </div>
-    <div id="main">
-      <% flash.each do |k,v| %>
-        <div class="alert alert-<%= k %>">
-          <%= v %>
-        </div>
-      <% end -%>
-      <%= yield %>
-    </div>
-  </div>
-  <div id="user-info">
-    <% if user_signed_in? %>
-      <%= link_to logout_path do %>
-        <i class="icon-signout"></i>
-      <% end -%>
-      <br>
-      <%= link_to user_edit_path do %>
-        <i class="icon-user"></i>
-      <% end -%>
-    <% else %>
-      <%= link_to CASClient::Frameworks::Rails::Filter.login_url(controller) do %>
-        <i class="icon-signin"></i>
-      <% end -%>
-    <% end -%>
-  </div>
+  <div class="body-bg"></div>
+  
+  <%= yield %>
+
+  <%= render partial: "layouts/user" %>
   <%= debug(params) if Rails.env.development? %>
   <%= javascript_include_tag "application" %>
   <%= yield :script %>
